<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBG"
    android:orientation="vertical"
    tools:context="aeontanvir.com.mobitourmate.EventCreateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <ImageView
            android:layout_weight="3"
            android:src="@drawable/applogo"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="CREATE A TOUR EVENT FOR MANAGE"
            android:textColor="@color/colorETFont"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/eventEdtDestination"
        android:hint="@string/txtDestination"
        android:textColorHint="@color/colorETHint"
        android:textColor="@color/colorETFont"
        android:background="@color/colorETBG"
        android:padding="@dimen/etPadding"
        android:layout_marginBottom="@dimen/etMarginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/eventEdtBudget"
        android:hint="@string/txtEstBudget"
        android:textColorHint="@color/colorETHint"
        android:textColor="@color/colorETFont"
        android:background="@color/colorETBG"
        android:padding="@dimen/etPadding"
        android:inputType="numberDecimal"
        android:layout_marginBottom="@dimen/etMarginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/eventEdtFromDate"
            android:hint="@string/txtFromDate"
            android:layout_weight="20"
            android:textColorHint="@color/colorETHint"
            android:textColor="@color/colorETFont"
            android:background="@color/colorETBG"
            android:padding="@dimen/etPadding"
            android:layout_marginBottom="@dimen/etMarginBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/cal_icon"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/eventEdtToDate"
            android:hint="@string/txtToDate"
            android:layout_weight="20"
            android:textColorHint="@color/colorETHint"
            android:textColor="@color/colorETFont"
            android:background="@color/colorETBG"
            android:padding="@dimen/etPadding"
            android:layout_marginBottom="@dimen/etMarginBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/cal_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:onClick="createNewEvent"
            android:id="@+id/eventCreateBtn"
            android:text="@string/txtCreateEvent"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>




</LinearLayout>
